--- a/css/estilo.css
+++ b/css/estilo.css
@@ -145,21 +145,31 @@ header {
 }
 
 .box-comentario {
-  width: calc(100% / 3 - 20px);
+  width: calc(100% / 3 - 60px);
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
+  cursor: context-menu;
 }
 
 .cometario {
   font-size: 25px;
   flex: 1 0 auto;
   margin-bottom: 15px;
+  text-align: justify;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 .cometario::before {
   content: "\201F";
   font-size: 30px;
 }
+
 .cometario::after {
   content: "\201D";
   font-size: 30px;
@@ -172,7 +182,9 @@ header {
   border-bottom: 1px solid #1f598b;
 }
 
-.link-comentarios-google {font-size: 20px;}
+.link-comentarios-google {
+  font-size: 20px;
+}
 
 /* Estilo Localização */
 iframe {
