--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,7 @@
   font-family: 'Coolvetica';
   src: url(../fonts/coolvetica-rg.ttf);
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -11,195 +12,412 @@
   font-family: 'Coolvetica';
 }
 
-header, main, footer {
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-  margin-bottom: 100px;
+html {
+  scroll-behavior: smooth;
 }
 
 /* Estilo Header */
 header {
-padding-top: 20px;
+  padding-top: 20px;
+  max-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 80px;
 }
 
 .container-navg {
-display: flex;
-justify-content: space-between;
-margin-bottom: 100px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  max-width: 1100px;
+  width: 100%;
 }
 
-.container-navg figure {
-display: flex;
+.container-navg picture {
+  display: flex;
+  padding-left: 15px;
 }
 
 .container-navg img {
-width: 200px;
-object-fit: contain;
+  width: 200px;
+  object-fit: contain;
 }
 
-.container-navg nav {
-display: flex;
-align-items: center;
+.navg-menu {
+  display: flex;
+  align-items: center;
 }
 
-.container-navg a {padding: 15px 25px;font-size: 20px;transition: 0.3s;color: #1f598b;}
+.navg-menu-responsivo {
+  display: none;
+}
+
+.container-navg a {
+  padding: 10px 15px;
+  font-size: 20px;
+  transition: 0.3s;
+  color: #1f598b;
+}
 
 .container-navg a:hover {
-background-color: #1f598b;
-color: #ffde58;
-border: none;
-transition: 0.3s;
+  background-color: #1f598b;
+  color: #ffde58;
+  border: none;
+  transition: 0.3s;
+}
+
+.container-banner {
+  background-image: url(../assets/auto-mechanic.webp);
+  background-repeat: no-repeat;
+  background-position: right;
+  width: 100%;
+  background-color: #1f598b;
+  padding: 100px 75px;
+  color: white;
+  display: flex;
+  justify-content: center;
 }
 
 .container-banner h1 {
-font-size: 50px;
-margin-bottom: 20px;
-color: #1f598b;
+  font-size: 50px;
+  margin-bottom: 20px;
+  font-weight: 500;
+  text-shadow: 4px 5px black;
 }
 
 .container-banner h2 {
-font-size: 20px;
-margin-bottom: 20px;
-font-weight: 500;
-color: #1f598b;
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+  text-shadow: 2px 3px black;
 }
 
-.container-banner a {display: flex;align-items: center;justify-content: center;width: 200px;padding: 15px 25px;background-color: #43c554;color: white;border-radius: 10px;text-align: center;}
+.container-banner a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  padding: 15px 25px;
+  background-color: #43c554;
+  color: white;
+  border-radius: 10px;
+  text-align: center;
+}
 
 .container-banner a:hover {
-background-color: #369443;
-transition: 0.5s;
+  background-color: #369443;
+  transition: 0.5s;
 }
 
-.container-banner span {color: white;font-size: 15px;background-color: initial;}
+.container-banner span {
+  color: white;
+  font-size: 15px;
+  background-color: initial;
+}
 
 .container-banner svg {
-margin-left: 15px;
-fill: white;
-background-color: initial;
+  margin-left: 15px;
+  fill: white;
+  background-color: initial;
+}
+
+.miolo-banner {
+  max-width: 1100px;
+  width: 100%;
 }
 
 /* Estilo Main */
-.container-conteudo {display: flex;flex-direction: column;align-items: center;margin-bottom: 90px;}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-.container-conteudo h3 {text-align: center;font-size: 35px;color: #1f598b;margin-bottom: 45px;}
+.container-conteudo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+  max-width: 1100px;
+  width: 100%;
+}
+
+.container-conteudo h3 {
+  text-align: center;
+  font-size: 30px;
+  color: #1f598b;
+}
 
 /* Eslito Baterias */
-
 .baterias-img {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.baterias-img a {
+  width: calc(100% / 3 - 80px);
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .baterias-img img {
-width: calc(100% / 3 - 80px);
-margin-bottom: 20px;
-object-fit: contain;
--webkit-filter: grayscale(100%);
-filter: grayscale(100%);
-filter: gray;
-/* IE */
-cursor: pointer;
+  width: 280px;
+  height: 150px;
+  object-fit: contain;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+  cursor: pointer;
 }
 
 .baterias-img img:hover {
--webkit-filter: none;
-filter: none;
-transition: 0.5s;
+  -webkit-filter: none;
+  filter: none;
+  transition: 0.5s;
 }
 
 /* Estilo Comentarios */
+.container-conteudo.comentarios {
+  max-width: 100%;
+  width: 100%;
+  background-color: #1f598b;
+  padding: 60px 40px;
+}
+
+.container-conteudo.comentarios h3 {
+  color: white;
+  font-weight: 500;
+  margin-bottom: 60px;
+}
+
 .container-box-comentarios {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1100px;
+  width: 100%;
 }
 
 .box-comentario {
-width: calc(100% / 3 - 40px);
-margin-bottom: 50px;
-display: flex;
-flex-direction: column;
-cursor: context-menu;
-box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
-padding: 30px;
-background-color: white;
-border-radius: 5px;
+  width: calc(100% / 3 - 40px);
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  cursor: context-menu;
+  box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+  padding: 30px;
+  background-color: white;
+  border-radius: 5px;
 }
 
 .cometario {
-font-size: 25px;
-flex: 1 0 auto;
-margin-bottom: 15px;
-text-align: justify;
--webkit-touch-callout: none;
--webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
-background-color: white;
+  font-size: 20px;
+  flex: 1 0 auto;
+  margin-bottom: 15px;
+  text-align: justify;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: white;
 }
 
 .cometario::before {
-content: "\201F";
-font-size: 30px;
+  content: "\201F";
+  font-size: 30px;
 }
 
 .cometario::after {
-content: "\201D";
-font-size: 30px;
+  content: "\201D";
+  font-size: 30px;
 }
 
 .autor-comentario {
-display: flex;
-justify-content: flex-end;
-font-size: 18px;
-border-bottom: 1px solid #1f598b;
-background-color: white;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 18px;
+  border-bottom: 1px solid #1f598b;
+  background-color: white;
 }
 
-.link-comentarios-google {font-size: 15px;color: #1f598b;border: 1px solid #1f598b;padding: 15px 20px;}
+.link-comentarios-google {
+  font-size: 15px;
+  color: white;
+  border: 1px solid white;
+  padding: 15px 20px;
+  border-radius: 5px;
+  margin-top: 20px;
+}
 
 .link-comentarios-google:hover {
-  background-color: #1f598b;
-  color: #ffde58;
+  background-color: white;
+  color: #1f598b;
   transition: 0.3s;
-  }
+}
 
 /* Estilo Localização */
+.container-conteudo.location h3 {
+  margin-bottom: 60px;
+}
+
 iframe {
-width: 100%;
-height: 450px;
+  width: 100%;
+  height: 450px;
 }
 
 /* Estilo Footer */
-
 footer {
-display: flex;
-justify-content: space-between;
-max-width: 100%;
-width: 100%;
-background-color: #1f598b;
-margin-bottom: initial;
-padding: 30px;
-color: white;
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+  width: 100%;
+  background-color: #1f598b;
+  margin-bottom: initial;
+  padding: 30px;
+  color: white;
 }
 
 .conteudo-footer {
-width: calc(100%  / 3);
-display: flex;
-align-items: center;
-justify-content: center;
+  width: calc(100% / 3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
+
+.conteudo-footer span {
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  color: white;
+}
+
 .conteudo-footer svg {
-  margin-right: 5px;
   fill: white;
 }
 
 .dev-creator {
-color: white;
-padding: 15px;
+  color: white;
+  padding: 15px;
+}
+
+/* resposnsivo */
+@media (max-width: 1100px) {
+  .container-navg {
+    padding: 0 40px;
+  }
+
+  .container-banner {
+    background-size: contain;
+  }
+
+  .container-conteudo {
+    padding: 0 80px;
+  }
+
+  .baterias-img a {
+    width: calc(100% / 2 - 80px);
+  }
+
+  .box-comentario {
+    width: calc(100% / 2 - 40px);
+  }
+
+  .container-conteudo.comentarios {
+    padding: 60px 80px;
+  }
+
+}
+
+@media (max-width: 800px) {
+  .container-banner {
+    background-image: none;
+  }
+
+  .baterias-img img {
+    width: 260px;
+    height: 130px;
+  }
+
+  .container-navg img {
+    width: 70px;
+  }
+
+  .container-box-comentarios {
+    justify-content: center;
+  }
+
+  .box-comentario {
+    width: calc(100% - 40px);
+  }
+
+  .baterias-img img {
+    width: 100%;
+  }
+
+  .container-navg {
+    align-items: baseline;
+    margin-bottom: 20px;
+  }
+
+  .navg-menu {
+    display: none;
+  }
+
+  .navg-menu-responsivo {
+    position: relative;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .navg-menu-responsivo svg {
+    fill: #1f598b;
+  }
+
+  .sub-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 50px;
+  }
+
+  a.sub-menu-item {
+    color: white;
+  }
+
+  a.sub-menu-item:hover {
+    background-color: white;
+    color: #1f598b;
+  }
+}
+
+@media (max-width: 670px) {
+  .container-banner h1 {
+    font-size: 40px;
+  }
+
+  .container-conteudo {
+    padding: 0 40px;
+  }
+
+  .container-conteudo.comentarios {
+    padding: 60px 40px;
+  }
+
+  .baterias-img a {
+    width: calc(100% / 2 - 40px);
+  }
+}
+
+@media (max-width: 490px) {
+  .container-banner {
+    padding: 100px 35px;
+  }
 }
